--- a/SimTECH/SimTECH/Shared/Components/NumberDisplay.razor
+++ b/SimTECH/SimTECH/Shared/Components/NumberDisplay.razor
@@ -1,5 +1,5 @@
-﻿<MudPaper Class="py-1 px-2" Style="@_styles">
-    <MudText Typo="Typo">@ChildContent</MudText>
+﻿<MudPaper Class="py-1 px-2 text-center" Style="@_styles">
+    <MudText Typo="@Typo">@ChildContent</MudText>
 </MudPaper>
 
 @code {
