--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -285,6 +285,12 @@ th {
     font-size: 4em;
 }
 
+.flex-block-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 .overflow-hider {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -504,6 +510,15 @@ th {
     justify-content: end;
     align-items: end;
     width: 75px;
+}
+
+.dynamic-guide-container {
+    padding: 8px;
+    min-width: 500px;
+}
+
+.guide-popup-element {
+    margin-right: 20px;
 }
 
 /* graphics */
