--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/StandingsTab/ConstructorResults.razor
@@ -1,5 +1,7 @@
 ﻿@using SimTECH.Pages.Seasons.Overview.Tabs.StandingsTab.Dialogs
 
+@inject IDialogService _dialogService
+
 <MudTable Items="@StandingConstructors" Dense="true" id="wcc-season-results">
     <ToolBarContent>
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4 mud-width-full">
@@ -70,23 +72,29 @@
     </RowTemplate>
 </MudTable>
 
-    @code {
+@code {
     [CascadingParameter] public OverviewModel OverviewModel { get; set; }
 
     [Parameter] public Dictionary<int, Country> CountryRounds { get; set; }
     [Parameter] public List<StandingTeamModel> StandingConstructors { get; set; }
-    [Parameter] public EventCallback OnOpenWccChart { get; set; }
 
-    int lowestScoringPosition = 10;
-
-    protected override void OnInitialized()
+    private int lowestScoringPosition
     {
-        if (OverviewModel.Season?.PointAllotments?.Any() == true)
-            lowestScoringPosition = OverviewModel.Season.PointAllotments.Max(e => e.Position);
+        get
+        {
+            var lowest = 10;
+
+            if (OverviewModel.Season?.PointAllotments?.Any() == true)
+                lowest = OverviewModel.Season.PointAllotments.Max(e => e.Position);
+
+            return lowest;
+        }
     }
 
     private async Task ShowWccResultGraph()
     {
-        await OnOpenWccChart.InvokeAsync();
+        var parameters = new DialogParameters { ["Teams"] = StandingConstructors, ["Season"] = OverviewModel.Season };
+
+        _ = await _dialogService.ShowAsync<WccResultChart>("WCC results chart", parameters, Globals.StatisticDialogDefaultOptionsXl);
     }
 }
