--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/LandingTab/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/LandingTab/Landing.razor
@@ -108,7 +108,7 @@
 
                 @if (OverviewModel.Season.HasRaceClasses)
                 {
-                    <MudText Color="Color.Warning">selector works, but pls more pretti</MudText>
+                    <MudText Color="Color.Warning">This specific block will still be improved in terms of designing</MudText>
 
                     <MudRadioGroup Value="@OverviewModel.ActiveClassId"
                                    ValueChanged="OnClassSelected">
